--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "sass": "^1.42.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^7.0.6"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
+    "@types/react-slick": "^0.23.5",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.3"
