--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
     "sass": "^1.42.1",
     "slick-carousel": "^1.8.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.24",
+    "@types/react-scroll": "^1.8.3",
     "@types/react-slick": "^0.23.5",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
